Prevent Horizontal Scrolling on Campaign Pages

--- a/dev/scss/campaign.scss
+++ b/dev/scss/campaign.scss
@@ -197,6 +197,7 @@ body.page-template-page_campaign-template {
 
       .inner-wrapper {
         display: flex;
+        overflow-x: hidden;
       }
 
       .title-container {
